--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.0.3"
   },
   "dependencies": {
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "modern-normalize": "^3.0.1"
   }
 }
